--- a/Quellen.bib
+++ b/Quellen.bib
@@ -110,3 +110,311 @@ abstract = {CRISPR–Cas systems are recently discovered, RNA-based immune syste
   DATE           = {1984},
 }
 
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+% Einleitung: Zitat
+@online{Friedrich_Hacker,
+  author      = {zitate.eu},
+  year        = {2022},
+  title       = {Zitate von Prof.Dr. Friedrich Hacker},
+  url         = {https://www.zitate.eu/autor/prof-dr-friedrich-hacker-zitate/171727},
+}
+
+% einleitung: häusliche Gewalt
+@MISC{häusliche_Gewalt,
+  author      = {{Bundesministerium für Familien, Senioren, Frauen und Jugend}},
+  shortauthor = {BMFSFJ},
+  title       = {Formen der Gewalt erkennen},
+  year        = {2021},
+  url         = {https://www.bmfsfj.de/bmfsfj/themen/gleichstellung/frauen-vor-gewalt-schuetzen/haeusliche-gewalt},
+}
+
+% Theorie Aggresivität  Seite 9: https://archive.org/details/frustrationaggre00doll/page/8/mode/2up?q=aggression
+@inbook{Def_Aggression_1939,
+  author         = {Dollard, J., Doob, L.W., Miller, N.E., Mowrer, O.H. & Sears, R.R.},
+  chapter        = {Definitions},
+  pages          = {1--27},
+  publisher      = {New Haven: Yale University-Press},
+  title          = {Frustration and Aggression},
+  year           = {1939}
+}
+
+@inbook{Def_unterscheidung_Springer,
+  author         = {Kornadt, HJ.},
+  chapter        = {Was ist Aggression? Was ist Aggressivität? Und wie entstehen sie?},
+  editor         = {Springer Fachmedien Wiesbaden GmbH},
+  pages          = {31--38},
+  publisher      = {VS Verlag für Sozialwissenschaften},
+  title          = {Aggression},
+  year           = {2011},
+  doi            = {https://doi.org/10.1007/978-3-531-93006-0_2}
+}
+
+@online{Def_Aggression_Duden,
+  author        = {Duden},
+  title         = {Aggression},
+  year          = {2022},
+  url           = {https://www.duden.de/rechtschreibung/Aggression}
+}
+
+@online{was_Aggression,
+  author          = {{Verwaltungs-Berufsgenossenschaft}},
+  shortauthor     = {VBG},
+  title           = {Was ist Aggression?},
+  year            = {2022},
+  url             = {https://www.vbg.de/wbt/gewaltpraevention/daten/html/402.htm}
+}
+
+@article{positive_aggression,
+  author          = {Ellis, A.},
+  journal         = {Humanitas},
+  title           = {Healthy and unhealthy aggression},
+  volume          = {12},
+  year            = {1976},
+  pages           = {239--254},
+}
+
+@article{Aggression,
+  author          = {Liu, J.},
+  journal         = {Issues in Mental Health Nursing},
+  issn            = {7},
+  title           = {Concept Analysis: Aggression},
+  volume          = {25},
+  year            = {2004},
+  pages           = {693--714},
+  doi             = {https://doi.org/10.1080/01612840490486755},
+}
+
+@online{Def_Aggressivität_Duden, 
+  author        = {Duden},
+  title         = {Aggressivität},
+  year          = {2022},
+  url           = {https://www.duden.de/rechtschreibung/Aggressivitaet}
+}
+
+@online{Def_Aggressivität_Spektrum,
+  author        = {Spektrum},
+  title         = {Lexikon der Psychologie: Aggressivität},
+  year          = {2022},
+  url           = {https://www.spektrum.de/lexikon/psychologie/aggressivitaet/346}
+}
+
+@online{Def_Aggressivität_eng1,
+  author        = {Alexa Clark},
+  title         = {Aggressiveness},
+  year          = {2021},
+  url           = {https://psychoques.com/aggressiveness/}
+}
+
+@online{Def_Aggressivität_vs_violence,
+  author        = {Alexa Clark},
+  title         = {Differences between aggressiveness and violence},
+  year          = {2021},
+  url           = {https://psychoques.com/differences-between-aggressiveness-and-violence/}
+}
+
+@online{Gewaltarten_WHO,
+  author        = {Krug, E.G., Dahlberg, L.L., Mercy, J.A., Zwi, A.B., Lozano R.},
+  title         = {World report on violence and health (WHO)},
+  year          = {2002},
+  editor        = {World Health Organisation},
+  url           = {https://apps.who.int/iris/bitstream/handle/10665/42495/9241545615_eng.pdf}
+}
+
+@inbook{H3_MFUnterschied,
+  author         = {Frost, W.D., Averill, J.R.},
+  chapter        = {Differences Betweem Men and Women in the Everyay Experience of Anger},
+  pages          = {281--317},
+  publisher      = {Springer Verlag New York Inc.},
+  title          = {Anger and Aggression: An Essay on Emotion},
+  year           = {1982}
+}
+
+@incollection{jack1999behind,
+  title          = {Behind the mask},
+  author         = {Jack, D.C.},
+  booktitle      = {Behind the Mask},
+  year           = {1999},
+  publisher      = {Boston: Harvard University Press},
+  doi            = {https://doi.org/10.4159/9780674038998},
+}
+
+@article{Aggressionsfragebogen,
+  author        = {Werner, R. & von Collani, G.},
+  title         = {Deutscher Aggressionsfragebogen},
+  journal       = {Zusammenstellung sozialwissenschaftlicher Items und Skalen (ZIS)},
+  publisher     = {ZIS - GESIS Leibniz Institute for the Social Sciences},
+  year          = {2004},
+  doi           = {10.6102/zis52},
+}
+
+@online{Gewalt_Duden,
+  author        = {Duden},
+  title         = {Gewalt},
+  year          = {2022},
+  url           = {https://www.duden.de/rechtschreibung/Gewalt}
+}
+
+@online{impulsive_aggro_psych_Störung,
+  author        = {Amann, B.H.},
+  title         = {A Clinician's Guide to Impulsive Aggression},
+  year          = {2022},
+  url           = {https://www.additudemag.com/impulsive-aggression-clinicians-guide/},
+}
+
+@online{impulsive_aggro,
+  author        = {AlleyDog.com},
+  title         = {Impulsive Aggression},
+  year          = {2022},
+  url           = {https://www.alleydog.com/glossary/definition.php?term=Impulsive+Aggression},
+}
+
+@online{impulsive_instrumental_aggro_healtline,
+  author        = {Gabbey, A.E., Raypole, C.},
+  editor        = {Dr. Juby, B.},
+  title         = {Aggressive Behaviou: Unterstanding Aggression and How to Treat It},
+  year          = {2022},
+  url           = {https://www.healthline.com/health/aggressive-behavior},
+}
+
+@online{instrumental_aggro,
+  author         = {Nickerson, C.},
+  title          = {Instrumental Aggression: Definition & Examples},
+  year           = {2022},
+  url            = {https://www.simplypsychology.org/instrumental-aggression.html},
+}
+
+@online{instrumental_dictionary,
+  author         = {Kent, M.},
+  title          = {The Oxford Dictionary of Sports Science & Medicine},
+  year           = {2007},
+  url            = {https://www.oxfordreference.com/view/10.1093/acref/9780198568506.001.0001/acref-9780198568506-e-3546)},
+}
+
+@online{physische_verbale_aggro,
+  author        = {University of Minnesota},
+  title         = {10.1 Defining Aggression},
+  year          = {2022},
+  url           = {https://open.lib.umn.edu/socialpsychology/chapter/10-1-defining-aggression/},
+}
+
+@online{physische_verbale_aggro_2,
+  author        = {vioenTia},
+  title         = {Definitionen: Aggression & Gewalt in der Psychologie},
+  year          = {2022},
+  url           = {https://www.violentia-muenchen.de/unterscheidung-von-aggression-und-gewalt-in-der-psychologie/},
+}
+
+@article{ausmaß_verbale_aggro,
+  author          = {Craig, W.M.},
+  journal         = {Personality and Individual Differences},
+  title           = {The relationship among bullying, victimization, depression, anxiety, and aggression in elementary school children},
+  volume          = {24},
+  pages           = {123--130},
+  year            = {1998},
+}
+
+@inbook{Aggro_Theorie,
+  author         = {Bandura, A.},
+  chapter        = {Psychological mechanisms of aggression.},
+  editor         = {Geen, R.G., Donnerstein, E.I.},
+  pages          = {1--40},
+  publisher      = {New York: Academic Press},
+  title          = {Aggression: Theoretical and empirical reviews},
+  year           = {1983}
+}
+
+@inbook{Aggro_Theorie_Buch,
+  author         = {Krahé, B.},
+  chapter        = {Aggression},
+  editor         = {Jonas, K., Stroebe, W., Hewstone, M.},
+  pages          = {315--356},
+  publisher      = {Berlin Heidelberg: Springer-Verlag},
+  title          = {Sozialpsychologie},
+  year           = {2014},
+  edition        = {6},
+}
+
+@inbook{physische_Gewalt_wie_aggro,
+  author         = {Brzank, P.},
+  chapter        = {Gewalt gegen Frauen: eine theoretische Verortung},
+  pages          = {32},
+  publisher      = {Wiesbaden: VS Verlag für Sozialwissenschaften},
+  title          = {Wege aus der Partnergewalt},
+  subtitle       = {Frauen auf der Suche nach Hilfe},
+  year           = {2012},
+  doi            = {https://doi.org/10.1007/978-3-531-18756-3},
+}
+
+@inbook{Def_haus_Gewalt,
+  author         = {Gerlach, K.},
+  chapter        = {Häusliche Gewalt: Definition},
+  editor         = {Grassberger, M., Türk, E., Yen, K.},
+  pages          = {228--242},
+  publisher      = {Berlin Heidelberg: Springer-Verlag},
+  title          = {Klinisch-forensische Medizin},
+  year           = {2013}
+}
+
+@thesis{Def_haus_Gewalt_2,
+  author        = {Kolier, S.},
+  title         = {Frauen als Opfer häuslicher Gewalt: Eine empirische Darstellung mit Bezug auf erneute Gewalt in Partnerschaften und künftige Liebesbeziehungen},
+  year          = {2019}
+}
+
+@MISC{Def_Form_Folge_Gewalt,
+  author       = {Eidgenössisches Büro für die Gleichstellung von Frau und Mann},
+  shortauthor  = {EBG},
+  title        = {Definition, Formen und Folgen häuslicher Gewalt},
+  year         = {2020},        
+}
+
+@inbook{ph_G_wie_aggro,
+  author         = {Szomoru, S.},
+  pages          = {29},
+  publisher      = {Münschen: Starks-Sture-Verlag},
+  title          = {Wer einmal schlägt wird's wieder tun: Gewalt und Co-Abhängigkeit in Beziehungen},
+  year           = {2006}
+}
+
+@thesis{Gewaltart,
+  author        = {Blumenthal, S., Simonett, L.},
+  title         = {Häusliche Gewalt gegen Frauen Analyse der aktuellen Unterstützungsangebote mit Handlungsempfehlungen für den Kanton Graubünden},
+  year          = {2019},
+}
+
+@inbook{psych_Gewalt,
+  author         = {Lamnek, S., Luedtke, J., Ottermann, R. und Vogl, S.},
+  chapter        = {Erscheinungsformen häuslicher Gewalt},
+  editor         = {Lamnek, S., Luedtke, J., Ottermann, R. und Vogl, S.},
+  pages          = {115},
+  publisher      = {VS Verlag für Wozialwissenschaften},
+  title          = {Tatort Familie},
+  subtitle       = {Häusliche Gewalt im gesellschaftlichen Kontext},
+  edition        = {3., erweiterte und überarbeitete Aufl.},
+  year           = {2012},
+  doi            = {https://doi.org/10.1007/978-3-531-93127-2},
+}
+
+@inbook{psych_Gewalt_2,
+  author         = {Hirigoyen, M.F.},
+  translator     = {Gabler, I. M.},
+  chapter        = {Seelische Gewalt},
+  pages          = {37},
+  publisher      = {Münschen: C.H.Beck},
+  title          = {Warum tust du mir das an?},
+  subtitle       = {Gewalt in Partnerschaften},
+  year           = {2006}
+}
+
+@inbook{Übergang_psy_zu_sex_Gewalt,
+  author         = {Ueckeroth, L.},
+  chapter        = {Partnergewalt gegen Frauen},
+  pages          = {24},
+  publisher      = {Herbolzheim: Centaurus Verlag & Media},
+  title          = {Partnergewalt gegen Frauen und deren Gewaltbewältigung},
+  year           = {2014},
+  doi            = {https://doi.org/10.1007/978-3-86226-848-1},
+}
