--- a/Titelblatt.tex
+++ b/Titelblatt.tex
@@ -15,8 +15,8 @@
     % Studienarbeit im Modul XY
 
     Thema:\\
-    {\bf Eine LaTeX-Vorlage für wissenschaftliche Arbeiten der Fakultät für 
-    Angewandte Psychologie an der SRH Hochschule Heidelberg} \\[2cm]  
+    {\bf Eine empirische Untersuchung der Aggressivität des Beobachters häuslicher Gewalt
+    und dessen Akzeptanz von Gewaltmythen} \\[2cm]  
     % Thema in geschweifte Klammer einfügen
 
     Eingereicht von: Teresa Seidl Fern\'andez\\    % eigenen Namen einfügen
@@ -25,7 +25,7 @@
 
     Studiengangsleiter: Dipl-Psych. Willi Neuthinger\\
     % Das bleibt auf weiteres fix
-    Betreuende/r Dozent/in: Frau Y\\[1cm]          % Name der betreuenden Person
+    Betreuender Dozent: Prof. Dr. Haß\\[1cm]       % Name der betreuenden Person
     % in der Thesis oder im Modul
 
     Heidelberg, den \today
