--- a/Ehrenwörtliche Erklärung.tex
+++ b/Ehrenwörtliche Erklärung.tex
@@ -2,19 +2,19 @@
 \fontsize{18pt}{0pt}\textbf{Ehrenwörtliche Erklärung}
 \parskip=32pt
 
-\noindent Gemäß Studien- und Prüfungsordnung erklären wir, dass wir diese schriftliche 
-Hausarbeit selbstständig angefertigt und wörtliche und sinngemäße Zitate 
-kenntlich gemacht haben. Mit der Überprüfung auf etwaige Übereinstimmungen mit 
-fremden Quellen mit Hilfe von Anti- Plagiatssoftware sind wir einverstanden. 
-Wir erklären außerdem, dass diese Arbeit nicht im Rahmen eines anderen 
-Prüfungsverfahrens bereits vorgelegt wurde. 
+\noindent Gemäß Studien- und Prüfungsordnung erkläre ich, dass ich diese 
+Bachelorthesis selbstständig angefertigt und wörtliche und sinngemäße 
+Zitate kenntlich gemacht habe. Mit der Überprüfung auf etwaige 
+Übereinstimmungen mit fremden Quellen mit Hilfe von Anti- Plagiatssoftware bin
+ich einverstanden. Ich erkläre außerdem, dass diese Arbeit nicht im Rahmen 
+eines anderen Prüfungsverfahrens bereits vorgelegt wurde. 
 \parskip=32pt
 
 \noindent Heidelberg, den \today
 \parskip=32pt
 
-\noindent Unterschriften:
+\noindent Unterschrift: % Unterschriften
 
 [Unterschrift 1]
 
-[Unterschrift 2]
+% [Unterschrift 2]
