Quellen werden angezeigt, Tabelle und Abbildung sind als Prefixes in den Verzeichnissen, es gibt die Nummerierung in der 4ten Ebene

--- a/1 Einleitung.tex
+++ b/1 Einleitung.tex
@@ -1,9 +1,6 @@
 \chapter{Einleitung}   \label{ch_1}
 % Aggressivität
-Prof. Dr. Friedrich Hacker sagte \enquote{Jede Aggression sucht sich zu rechtfertigen. 
-Angefangen hat doch immer der andere}. \parencite{Friedrich_Hacker} 
-Aggressivität zeigt sich auf unterschieliche Art und Weisen. Jeder Mensch hat 
-ein gewisses Niveau von Aggressivität. Einige zeigen es mehr als andere. 
+Prof. Dr. Friedrich Hacker sagte \enquote{Jede Aggression sucht sich zu rechtfertigen. Angefangen hat doch immer der andere}. \parencite{Friedrich_Hacker} Aggressivität zeigt sich auf unterschieliche Art und Weisen. Jeder Mensch hat ein gewisses Niveau von Aggressivität. Einige zeigen es mehr als andere. 
 
 %Aggression an sich eher spontan: 1st time is Gewalt vielleicht mal ausgerutscht und das
 %entwickelt sich dann in langanhaltende häusliche Gewalt. 
@@ -14,12 +11,12 @@ bei der man nie damit gerechnet hätte, dass sie es einem gegenüber zeigt. In s
 Fall weiß die betroffene Person oftmals nicht, wie sie dieser Situation entkommen kann. 
 Das Zuhause sollte für alle ein sich Ort sein, an dem sie sich entspannen können. 
 Dennoch gibt es viele Fälle wo dies nicht der Fall ist. Im Jahr 2020 gab es 148.031 
-gemeldete Fälle von häuslicher Gewalt %\parencite{häusliche_Gewalt}. 
+gemeldete Fälle von häuslicher Gewalt \parencite{häusliche_Gewalt}. 
 Die Dunkelziffer ist weit höher, da viele Betroffene keine Anzeige erstatten. Bei Männern
 ist ein solches Verhalten möglicherweise schambehaftet.
 
 % victim blaming
-Wie Hacker %\parencite{Friedrich_Hacker} 
+Wie Hacker \parencite{Friedrich_Hacker} 
 in seinem Zitat beschrieben hat, sucht der Aggressor sich zu rechtfertigen, er fällt
 dem \textit{victim blaming} zum Opfer. Das bedeutet, dass eine Person die Verantwortung
 dem Geschädigten zuschreibt. 
