--- a/2 Theorie/2.1.2 Häusliche Gewalt.tex
+++ b/2 Theorie/2.1.2 Häusliche Gewalt.tex
@@ -1,58 +1,59 @@
 \subsection{Häusliche Gewalt}    \label{subsec_2.1.2}
 % Definition häusliche Gewalt
 Wie in Kapitel ~\ref{subsec_2.1.1} Aggressivität und Aggression bereits erwähnt ist der Zweck von 
-Gewalt die Macht und Kontrolle zu erhalten. %\parencite{Def_Aggressivität_vs_violence}.
+Gewalt die Macht und Kontrolle zu erhalten \parencite{Def_Aggressivität_vs_violence}.
 Wenn in einer Beziehung oder innerhalb der Familie eine Person versucht Macht oder Kontrolle
 über ein anderes Mitglied zu haben, zählt das zur häuslichen Gewalt. Sowohl in bestehenden, wie 
 auch in aufgelösten Beziehungen familiären, ehelichen oder eheähnlichen Ursprungs kann häusliche
-Gewalt auftreten. %\parencite{Def_haus_Gewalt; %Def_haus_Gewalt_2}.
+Gewalt auftreten \parencite{Def_haus_Gewalt, Def_haus_Gewalt_2}.
 Diese kommmt nicht nur in der häuslichen Umgebung, einem als sicher gedachten Ort vor, sondern 
-kann auch im öffentlichen Raum stattfinden. %\parencite{Gewaltarten_WHO}
+kann auch im öffentlichen Raum stattfinden \parencite{Gewaltarten_WHO}
 Die in häusliche Gewalt involvierten Personenkonstellationen können Kinder-Eltern, Eltern-Kinder,
-Geschwister und Partnerschaften sein. %\parencite{Def_Form_Folge_Gewalt}
+Geschwister und Partnerschaften sein \parencite{Def_Form_Folge_Gewalt}
 Diese Studie fokusiert sich auf die Gewalt innerhalb der Partnerschaft.
 
 % GEWALTARTEN
+\subsubsection{Gewaltarten}     \label{2.1.2.1}
 Wenn man das Wort Gewalt hört, denken die meisten erst an \textit{physische Gewalt}. Doch so wie die 
 Aggression kann sich die Gewalt auf unterschiedliche Arten manifestiert. Eine einheitliche 
 Unterteilung der verschiedenen Gewaltarten ist in der Forschung bislang nicht gegeben. Je nach 
 Schwerpunkt wird auf bis zu fünf Gewaltformen unterschieden. Zu der zu Beginn genannten physischen 
-Gewalt gibt es noch die \textit{psychische, sexualisiert, soziale und ökonomische Gewalt}. %\parencite{Def_Form_Folge_Gewalt}
+Gewalt gibt es noch die \textit{psychische, sexualisiert, soziale und ökonomische Gewalt} \parencite{Def_Form_Folge_Gewalt}
 
 % physische Gewalt
 In Kapitel ~\ref{subsec_2.1.1} Aggressivität und Aggression wurde bereits auf die physische 
 Aggression eingegangen und darauf, dass die Abgrenzung von Gewalt und Aggression nicht einfach ist. 
 Denn wie auch die physische Aggression, ist Bestandteil der körperlichen Gewalt jede Form von 
-physischen Angriffen. %\parencite{ph_G_wie_aggro}
+physischen Angriffen \parencite{ph_G_wie_aggro}
 Darunter zählen beispielsweise Tritte, Bisse, Würgen oder Gewaltausübungen mithilfe von Gegenständen.
-Im Extremfall kann es zur Tötung kommen. %\parencite{Gewaltart; Def_haus_Gewalt; physische_Gewalt_wie_aggro; Def_Form_Folge_Gewalt}.
+Im Extremfall kann es zur Tötung kommen \parencite{Gewaltart, Def_haus_Gewalt, physische_Gewalt_wie_aggro, Def_Form_Folge_Gewalt}.
 
 % psychische Gewalt
-Psychische Gewalt kann durch Worte oder auch durch Gesten und Gesichtsausdrücke erfolgen. %\parencite{Def_haus_Gewalt_2}
+Psychische Gewalt kann durch Worte oder auch durch Gesten und Gesichtsausdrücke erfolgen \parencite{Def_haus_Gewalt_2}
 Einige Beispiele für psychische Gewalthandlungen sind Beleidigungen, wie Beschimpfungen und die damit 
 einhergehende Demütigung der betroffenen Person. Oftmals beschädigt die gewalttätige Person Eigentum
 des Opfers oder behandelt dessen Haustiere nicht artgerecht. Es kann auch dazu kommen, dass die 
 eigenen Kinder genutzt werden, um bei der betroffenen Person Druck auszuüben. Unter psychische Gewalt
 fallen auch  eifersüchtige Verhaltensweisen, die sich bei der Beendigung einer Beziehung in Stalking
-umwandeln können. %\parencite{Def_Form_Folge_Gewalt; Gewaltart; Def_haus_Gewalt_2}.
+umwandeln können \parencite{Def_Form_Folge_Gewalt, Gewaltart, Def_haus_Gewalt_2}.
 Diese Taten werden verwendet, um den Gegenüber zu manipulieren oder um den eigenen Interssen und 
 Absichten nachzugehen. Sie können auch Verwendung finden, um in böswilliger Absicht das 
-Selbstbewusstsein des Partner zu senken, so das dieser widerstandslosen Gehorsam zeigt. %\parencite{Def_haus_Gewalt_2}
+Selbstbewusstsein des Partner zu senken, so das dieser widerstandslosen Gehorsam zeigt \parencite{Def_haus_Gewalt_2}
 Diese Art von Gewalt ist nicht so wie die physische Gewalt zwangläufig am Körper sichtbar, ihre 
-negativen Folgen können dennoch tiefer liegen und länger andauern. %\parencite{psych_Gewalt}.
-Oftmals ist die psychische Gewalt bloß ein Vorreiter für spätere sexuelle Misshandlungen. %\parencite{psych_Gewalt_2}.
+negativen Folgen können dennoch tiefer liegen und länger andauern \parencite{psych_Gewalt}.
+Oftmals ist die psychische Gewalt bloß ein Vorreiter für spätere sexuelle Misshandlungen \parencite{psych_Gewalt_2}.
 Des Weiteren werden Opfer einer solchen Gewalt von ihrem sozialen Umfeld nicht immer erkannt. Dies 
 kann dazu führen, dass sie an ihrer persönlichen Wahrnehmung zweifeln. Die Reichweite und Intensität
 der Folgen ist von Person zu Person unterschiedlich und hängt von dessen Vorerfahrungen ab.
-Laut dem EBG %\textcite{Def_Form_Folge_Gewalt}
+Laut dem \textcite{Def_Form_Folge_Gewalt}
 zählt die Forschung die soziale und ökonomische Gewalt zu der psychischen dazu. Im Umfang dieser 
 Arbeit werden diese drei Arten jedoch getrennt betrachtet. 
 
 % sexualisiert Gewalt
 Wie im zuvorigen Absatz bereits dargeboten, können psychische Gewalthandlungen, wie Drohungen oder 
-oportune bloßstellende Kommentare, als Vorbote sexualisierter Gewalt genutzt werden. %\parencite{Übergang_psy_zu_sex_Gewalt}.
+oportune bloßstellende Kommentare, als Vorbote sexualisierter Gewalt genutzt werden \parencite{Übergang_psy_zu_sex_Gewalt}.
 Des öfteren geben die Betroffenen auf sich zu wehren und gehen den Anforderungen und Wünschen des
-Täters nach. Ein solches Verhalten wird von einigen als möglicher Konsens gedeutet. %\parencite{Def_haus_Gewalt_2}.
+Täters nach. Ein solches Verhalten wird von einigen als möglicher Konsens gedeutet \parencite{Def_haus_Gewalt_2}.
 
 
 sexuelle Belästigung (1)
