--- a/Quellen.bib
+++ b/Quellen.bib
@@ -133,7 +133,7 @@ abstract = {CRISPR–Cas systems are recently discovered, RNA-based immune syste
 
 % Theorie Aggresivität  Seite 9: https://archive.org/details/frustrationaggre00doll/page/8/mode/2up?q=aggression
 @inbook{Def_Aggression_1939,
-  author         = {Dollard, J., Doob, L.W., Miller, N.E., Mowrer, O.H. & Sears, R.R.},
+  author         = {Dollard, J. and Doob, L.W. and Miller, N.E. and Mowrer, O.H. und Sears, R.R.},
   chapter        = {Definitions},
   pages          = {1--27},
   publisher      = {New Haven: Yale University-Press},
@@ -216,7 +216,7 @@ abstract = {CRISPR–Cas systems are recently discovered, RNA-based immune syste
 }
 
 @online{Gewaltarten_WHO,
-  author        = {Krug, E.G., Dahlberg, L.L., Mercy, J.A., Zwi, A.B., Lozano R.},
+  author        = {Krug, E.G. and Dahlberg, L.L. and Mercy, J.A. and Zwi, A.B. and Lozano R.},
   title         = {World report on violence and health (WHO)},
   year          = {2002},
   editor        = {World Health Organisation},
@@ -224,7 +224,7 @@ abstract = {CRISPR–Cas systems are recently discovered, RNA-based immune syste
 }
 
 @inbook{H3_MFUnterschied,
-  author         = {Frost, W.D., Averill, J.R.},
+  author         = {Frost, W.D. and Averill, J.R.},
   chapter        = {Differences Betweem Men and Women in the Everyay Experience of Anger},
   pages          = {281--317},
   publisher      = {Springer Verlag New York Inc.},
@@ -242,7 +242,7 @@ abstract = {CRISPR–Cas systems are recently discovered, RNA-based immune syste
 }
 
 @article{Aggressionsfragebogen,
-  author        = {Werner, R. & von Collani, G.},
+  author        = {Werner, R. und von Collani, G.},
   title         = {Deutscher Aggressionsfragebogen},
   journal       = {Zusammenstellung sozialwissenschaftlicher Items und Skalen (ZIS)},
   publisher     = {ZIS - GESIS Leibniz Institute for the Social Sciences},
@@ -272,7 +272,7 @@ abstract = {CRISPR–Cas systems are recently discovered, RNA-based immune syste
 }
 
 @online{impulsive_instrumental_aggro_healtline,
-  author        = {Gabbey, A.E., Raypole, C.},
+  author        = {Gabbey, A.E. and Raypole, C.},
   editor        = {Dr. Juby, B.},
   title         = {Aggressive Behaviou: Unterstanding Aggression and How to Treat It},
   year          = {2022},
@@ -281,14 +281,14 @@ abstract = {CRISPR–Cas systems are recently discovered, RNA-based immune syste
 
 @online{instrumental_aggro,
   author         = {Nickerson, C.},
-  title          = {Instrumental Aggression: Definition & Examples},
+  title          = {Instrumental Aggression: Definition und Examples},
   year           = {2022},
   url            = {https://www.simplypsychology.org/instrumental-aggression.html},
 }
 
 @online{instrumental_dictionary,
   author         = {Kent, M.},
-  title          = {The Oxford Dictionary of Sports Science & Medicine},
+  title          = {The Oxford Dictionary of Sports Science und Medicine},
   year           = {2007},
   url            = {https://www.oxfordreference.com/view/10.1093/acref/9780198568506.001.0001/acref-9780198568506-e-3546)},
 }
@@ -302,7 +302,7 @@ abstract = {CRISPR–Cas systems are recently discovered, RNA-based immune syste
 
 @online{physische_verbale_aggro_2,
   author        = {vioenTia},
-  title         = {Definitionen: Aggression & Gewalt in der Psychologie},
+  title         = {Definitionen: Aggression und Gewalt in der Psychologie},
   year          = {2022},
   url           = {https://www.violentia-muenchen.de/unterscheidung-von-aggression-und-gewalt-in-der-psychologie/},
 }
@@ -319,7 +319,7 @@ abstract = {CRISPR–Cas systems are recently discovered, RNA-based immune syste
 @inbook{Aggro_Theorie,
   author         = {Bandura, A.},
   chapter        = {Psychological mechanisms of aggression.},
-  editor         = {Geen, R.G., Donnerstein, E.I.},
+  editor         = {Geen, R.G. and Donnerstein, E.I.},
   pages          = {1--40},
   publisher      = {New York: Academic Press},
   title          = {Aggression: Theoretical and empirical reviews},
@@ -329,7 +329,7 @@ abstract = {CRISPR–Cas systems are recently discovered, RNA-based immune syste
 @inbook{Aggro_Theorie_Buch,
   author         = {Krahé, B.},
   chapter        = {Aggression},
-  editor         = {Jonas, K., Stroebe, W., Hewstone, M.},
+  editor         = {Jonas, K. and Stroebe, W. and Hewstone, M.},
   pages          = {315--356},
   publisher      = {Berlin Heidelberg: Springer-Verlag},
   title          = {Sozialpsychologie},
@@ -351,7 +351,7 @@ abstract = {CRISPR–Cas systems are recently discovered, RNA-based immune syste
 @inbook{Def_haus_Gewalt,
   author         = {Gerlach, K.},
   chapter        = {Häusliche Gewalt: Definition},
-  editor         = {Grassberger, M., Türk, E., Yen, K.},
+  editor         = {Grassberger, M. and Türk, E. and Yen, K.},
   pages          = {228--242},
   publisher      = {Berlin Heidelberg: Springer-Verlag},
   title          = {Klinisch-forensische Medizin},
@@ -365,7 +365,7 @@ abstract = {CRISPR–Cas systems are recently discovered, RNA-based immune syste
 }
 
 @MISC{Def_Form_Folge_Gewalt,
-  author       = {Eidgenössisches Büro für die Gleichstellung von Frau und Mann},
+  author       = {{Eidgenössisches Büro für die Gleichstellung von Frau und Mann}},
   shortauthor  = {EBG},
   title        = {Definition, Formen und Folgen häuslicher Gewalt},
   year         = {2020},        
@@ -380,15 +380,14 @@ abstract = {CRISPR–Cas systems are recently discovered, RNA-based immune syste
 }
 
 @thesis{Gewaltart,
-  author        = {Blumenthal, S., Simonett, L.},
+  author        = {Blumenthal, S. and Simonett, L.},
   title         = {Häusliche Gewalt gegen Frauen Analyse der aktuellen Unterstützungsangebote mit Handlungsempfehlungen für den Kanton Graubünden},
   year          = {2019},
 }
 
 @inbook{psych_Gewalt,
-  author         = {Lamnek, S., Luedtke, J., Ottermann, R. und Vogl, S.},
+  author         = {Lamnek, S. and Luedtke, J. and Ottermann, R. und Vogl, S.},
   chapter        = {Erscheinungsformen häuslicher Gewalt},
-  editor         = {Lamnek, S., Luedtke, J., Ottermann, R. und Vogl, S.},
   pages          = {115},
   publisher      = {VS Verlag für Wozialwissenschaften},
   title          = {Tatort Familie},
@@ -413,7 +412,7 @@ abstract = {CRISPR–Cas systems are recently discovered, RNA-based immune syste
   author         = {Ueckeroth, L.},
   chapter        = {Partnergewalt gegen Frauen},
   pages          = {24},
-  publisher      = {Herbolzheim: Centaurus Verlag & Media},
+  publisher      = {Herbolzheim: Centaurus Verlag und Media},
   title          = {Partnergewalt gegen Frauen und deren Gewaltbewältigung},
   year           = {2014},
   doi            = {https://doi.org/10.1007/978-3-86226-848-1},
